# maiko

./: .clang-format  .gitignore  .skip  CMakeLists.txt  COMPILE-FLAGS.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEWCDRCODING.md  NOTICE  README.md
.github/workflows/: Dockerfile_builder  Dockerfile_cygwin_builder  Dockerfile_cygwin_maiko  Dockerfile_maiko  build.yml  buildBuilderImage.yml  buildCygwinBuilderImage.yml  buildDocker.yml  buildRelease.yml  buildReleaseInclDocker.yml
docs/: NEWCDRCODING.md  Using-Dodo-networking-with-Maiko.md
inc/: Check.h  MyWindow.h  Stipple.h  XCursors.h  XKeymap.h  XVersion.h  XWaitCur.h  Xbitblt.h  Xcursdef.h  Xdefcur.h  Xdeflt.h  Xdisplay.h  Xicon.h  address.h  adr68k.h  allocmdsdefs.h  arith.h  arith2.h  arith2defs.h  arith3defs.h  arith4defs.h  arithopsdefs.h  array.h  array2defs.h  array3defs.h  array4defs.h  array5defs.h  array6defs.h  arraydefs.h  arrayopsdefs.h  bb.h  bbt386i.h  bbtmacro.h  bbtsub.h  bbtsubdefs.h  bindefs.h  bindsdefs.h  bitblt.h  bitbltdefs.h  bltdefs.h  (+216 more)
inc/maiko/: platform.h
include/: README  dld.h
src/: #ldeboot.c#  Cldeetr.c  allocmds.c  arith2.c  arith3.c  arith4.c  arithops.c  array.c  array2.c  array3.c  array4.c  array5.c  array6.c  arrayops.c  asmbbt.c  asmbitblt.c  atom.c  bbt68k.s  bbtSPARC.s  bbtsub.c  bin.c  binds.c  bitblt.c  blt.c  box  byteswap.c  call-c.c  car-cdr.c  cdaudio.c  cdrom.c  chardev.c  chatter.c  codeconv.c  codetbl.c  colorbltfns.c  common.c  conspage.c  cr  dbgtool.c  dir.c  (+148 more)
unused/: README  checksum  checksum-readme-internal  endiffix  find-writes  launch.asm  ldechecksum  makeinitlde  makewrong  mkdos  mkfile.c  mkfile.i  runlisp  runlispether  u2dnames.sed
